<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="quantity">quantity</string>
    <string name="_0" translatable="false">0</string>
    <string name="order">order</string>
    <string name="price">Order Summery</string>
    <string name="__0" translatable="false">$0</string>
    <string name="name">Name</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="negetive" translatable="false">-</string>
    <string name="positive" translatable="false">+</string>
    <string name="thank_you">Thank You</string>
    <string name="name1">\"Name: \"</string>
    <string name="added_whipped">added Whipped cream?</string>
    <string name="added_chocolate">added Chocolate?</string>
    <string name="quantity_display">\"Quantity: \"</string>
    <string name="total_price">\"Total $: \"</string>
    <string name="Maximum_orders">Maximum order 100 coffee</string>
    <string name="minimum_order">Minimum order 1 coffee</string>
</resources>